--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	    <div class="col-12">
 	      <button class="btn btn-primary" id="fileOpen">PDF Seçiniz</button> <br />
+	      <input type="hidden" id="hdnPath" />
             </div>
 
 	    <div class="col-sm-6">
@@ -43,7 +44,7 @@
             </div>
 
 	    <div class="col-12">
-	      <button class="btn btn-primary" id="">Test</button> <br />
+	      <button class="btn btn-primary" id="test">Test</button> <br />
             </div>
 
 	  </div>
@@ -57,13 +58,7 @@
             </div>
 
 	    <div class="col-12">
-              <label for="address" class="form-label">Adet</label>
-              <input type="number" class="form-control" id="adet" placeholder="Adet" min="1" max="5" required="">
-              <div class="invalid-feedback">Please enter your shipping address.</div>
-            </div>
-
-	    <div class="col-12">
-	      <button class="btn btn-primary" id="">Çalıştır</button> <br />
+	      <button class="btn btn-primary" id="run">Çalıştır</button> <br />
             </div>
 	  </div>
 	  <hr class="my-4">
